# Simple-Homework-System-main

./: .env  .env.example  .gitignore  README.md  app.py  config.py  homeworks.json  main.py  pyproject.toml  requirements.txt
forms/: auth.py  homework.py
models/: homework.py  user.py
routes/: admin.py  auth.py  student.py
templates/: admin_dashboard.html  base.html  login.html  register.html  student_dashboard.html
utils/: helpers.py
