[project]
name = "homework-station"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "mysql-connector-python>=9.5.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "wtforms>=3.2.1",
]
